--- a/firebase.json
+++ b/firebase.json
@@ -17,5 +17,10 @@
     "hosting": {
       "port": 8080
     }
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ]
   }
 }
