--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "firebase-admin": "^10.0.2",
     "firebase-functions": "^3.18.0",
     "moment": "^2.29.4",
-    "child-process-promise": "^2.2.0"
+    "child-process-promise": "^2.2.0",
+    "nodemailer": "^6.7.8"
   },
   "devDependencies": {
     "eslint": "^8.9.0",
